Added environment selection

--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -2,4 +2,5 @@
 $primary:#DC28E4;
 @import "./components/asideNav.scss";
 @import "./pages/labEditor.scss";
+@import "./pages/enviromentSelection.scss";
 @import "../../../node_modules/bootstrap/scss/bootstrap.scss";
